# iqra

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCS_AR.md  DOCS_EN.md  LICENSE  PR_BODY.md  PR_DESCRIPTION.md  README.md  STARTER_ISSUES.md  __init__.py  __main__.py  ast_nodes.py  compiler.py  dev.ps1  errors.py  interpreter.py  iqra-pkg-spec.md  iqra-pkg.json  lexer.py  nodeids  parser.py  pyproject.toml  repl.py  test_interpreter.py  test_stdlib.py  test_vm.py  tests.yml  tokens.py  vm.py  اقرا5.txt
iqra/: .cargo-metadata.json  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCS_AR.md  DOCS_EN.md  PR_BODY.md  PR_DESCRIPTION.md  README.md  SECURITY.md  cargo-audit.json  cargo-tree.txt  dev.ps1
iqra/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
iqra/.github/ISSUE_TEMPLATE/: bug_report.md
iqra/.github/workflows/: ci.yml  coverage.yml  docs.yml  quality-and-audit.yml  release.yml  security-audit-weekly.yml
iqra/benches/: lexer_bench.rs  parser_bench.rs
iqra/docs/: BUILTINS_AR.md  BUILTINS_EN.md  LANGUAGE_SPEC_AR.md  LANGUAGE_SPEC_EN.md  OUTPUT_LANG_AR.md  OUTPUT_LANG_EN.md
iqra/examples/: README.md  basics.iqra  builtins.iqra  collections.iqra  control_flow.iqra  functions.iqra  hello.iqra  system_demo.iqra  system_safe.iqra
iqra/src/: diagnostics.rs  error.rs  lib.rs  main.rs
iqra/src/lang/: ast.rs  (+6 more)
iqra/tests/: arabic.rs  cli.rs  lang.rs  logging.rs  mock_exec.rs  runtime_executor_injection.rs  security.rs  system.rs  system_fallback.rs
(+28 files in other folders)
