[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iqra"
version = "0.2.0-alpha"
description = "لغة برمجة تعليمية بالعربية — 'اقرأ' (Alpha)"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "مطور اقرأ", email = "you@example.com"}]
license = {text = "MIT"}
