[package]
name = "iqra"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "Iqra — Arabic-first small scripting language and interpreter"
license = "MIT"
repository = "https://github.com/AmjadAlbaaj/iqra.git"
homepage = "https://github.com/AmjadAlbaaj/iqra.git"
keywords = ["arabic", "language", "interpreter", "scripting"]
categories = ["language-tools", "parsers"]
authors = ["Albaaj <arjeic85@gmail.com>"]

[dependencies]
rand = "0.8"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustyline = "13"
owo-colors = "4"
regex = "1.11.2"
chrono = "0.4.42"
sys-info = "0.9.1"
uuid = "1.18.1"
base64 = "0.22.1"
once_cell = "1.21.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.5", default-features = false }
